scrolling on tablets in styles fixed

--- a/public/styles/components/_join-options-cards.scss
+++ b/public/styles/components/_join-options-cards.scss
@@ -43,6 +43,10 @@
       box-sizing: border-box;
       margin: 0;
       padding: 30px;
+
+      p {
+        display: none;
+      }
     }
   }
 
