--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -65,7 +65,6 @@ a {
     // Tablet devices
     padding-left: 16px;
     padding-right: 16px;
-    width: 100%;
   }
 
   @media (min-width: 1025px) {
